test_case/rust-lang_rust/57044_450553161_4.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/transmute/main.rs","byte_start":546,"byte_end":555,"line_start":20,"line_end":20,"column_start":17,"column_end":26,"is_primary":true,"text":[{"text":"    let x: u8 = transmute(10u16); //~ ERROR cannot transmute between types of different  
[01:02:32] Build completed unsuccessfully in 0:03:58
[01:02:32] Build completed unsuccessfully in 0:03:58
[01:02:32] Makefile:48: recipe for target 'check' failed
[01:02:32] make: *** [check] Error 1
124968 ./obj/build/x86_64-unknown-linux-gnu/stage0-bootstrap-tools/x86_64-unknown-linux-gnu
124964 ./obj/build/x86_64-unknown-linux-gnu/stage0-bootstrap-tools/x86_64-unknown-linux-gnu/release
119264 ./obj/build/x86_64-unknown-linux-gnu/stage0-bootstrap-tools/x86_64-unknown-linux-gnu/release/deps
115364 ./src/llvm/test/CodeGen
